# Atlas-ERP

./: .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.mjs  .releaserc  .roomodes  AGENTS.md  CHANGELOG.md  CODEX_MASTER_PROMPT.md  CODEX_START_HERE.md  README.md  ROOT_PROJECT_CONTEXT.md  business-platform-master-task-catalog.md  commitlint.config.mjs  docs-08-codex-CODEX_MASTER_INSTRUCTIONS.md  eslint.config.mjs  initial-roadmap.md  lint-staged.config.mjs  monorepo-structure.txt  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.json
.github/workflows/: build-backend.yml  build-desktop.yml  build-frontend.yml  build-worker.yml  deploy-prod.yml  deploy-staging.yml  docker-build.yml  lint-typecheck.yml  main.yml  module-store-gates.yml  pr.yml  prisma-validate.yml  release.yml  tests.yml
.husky/: commit-msg  pre-commit
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
apps/api/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  jest.config.e2e.js  jest.config.integration.js  jest.config.unit.js  package.json  tsconfig.eslint.json  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
plans/: pending-remediation-execution-plan.md  repository-cleanup-plan.md
prisma/: schema.prisma
scripts/: backup_files.sh  backup_pg.sh  purge_backups.sh  restore.sh
tools/: bootstrap.sh  infra-up.sh  reset-db-reseed.sh  reset-local.sh  run-prisma-with-root-env.mjs  run-with-root-env.mjs
(+1535 files in other folders)
