[package]
name = "atlaserp-desktop"
version = "0.0.0"
edition = "2021"
description = "AtlasERP — Shell desktop Tauri con SQLite local"

[lib]
name = "atlaserp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# SQLite local — bundled para no requerir SQLite del sistema
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
base64 = "0.22"
csv = "1.3"
rand = "0.8"
sha2 = "0.10"

